# py-uv-config-log-example

./: README.md  README_CN.md  pyproject.toml
res/conf/: config.yml
src/app1/: app1.py
src/app1/res/: config.yml
src/common/: app_context.py  proxy.py
src/common/conf/: config.py
src/common/log/: log_archiver.py  logger_factory.py
src/conf/: config.py
src/log/: logging.py  util.py
src/main/: core.py  setup.py
test/: config-test.yml  test_runner.py
