[project]
name = "example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "py7zr>=0.22.0",
    "pyinstaller>=6.11.1",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
