[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
  { name = "duanluan", email = "duanluan@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
dependencies = [
  "pyyaml>=6.0.2",
  "py7zr>=0.22.0",
  "apscheduler>=3.11.0",
  "pyinstaller>=6.13.0"
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
